<resources>
    <string name="app_name">DecagonTest</string>
    <string name="note">Welcome to APPFIND</string>
    <string name="owners">Car Owners</string>
    <string name="people">Find People</string>
    <string name="user_chika">Chika King</string>
    <string name="user_date">Monday, April 24 2021</string>
    <string name="user_email">chikakingsley@mail.com</string>
    <string name="user_country">Nigeria</string>
    <string name="user_car">Car: Rolls-Royce, 2007</string>
    <string name="fcountry">Country visited:</string>
    <string name="fcolor">Favorite Colours:</string>
    <string name="car_filter">Filter</string>
    <string name="car_filter1">Filter results</string>
    <string name="car_model">Car model</string>
    <string name="owner_country">Owner Country</string>
    <string name="carowners">Car owners in US</string>
    <string name="users">Users in FindApp</string>
</resources>