<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_filter"
                android:text="@string/car_filter1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/filter_model"
                android:hint="@string/car_model"
                android:layout_marginTop="6dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:background="@drawable/text_input"
                app:layout_constraintTop_toBottomOf="@id/tv_filter" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/filter_country"
                android:hint="@string/owner_country"
                android:layout_marginTop="20dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:background="@drawable/text_input"
                app:layout_constraintTop_toBottomOf="@id/filter_model" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/btn_filter"
                android:textAllCaps="false"
                android:textSize="21sp"
                android:text="@string/car_filter"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/filter_country" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>