<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                app:layout_collapseMode="parallax">
                
                <View
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:id="@+id/bg"
                    android:background="@color/design_default_color_primary"
                    app:layout_constraintTop_toTopOf="parent"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/user_avater"
                    app:civ_border_width="1.8dp"
                    app:civ_border_color="@color/black"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bg"
                    app:layout_constraintBottom_toBottomOf="@id/bg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/names"
                    android:text="@string/user_chika"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/user_avater"
                    app:layout_constraintStart_toStartOf="@id/user_avater"
                    app:layout_constraintEnd_toEndOf="@id/user_avater"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_date"
                    app:layout_constraintTop_toBottomOf="@id/names"
                    app:layout_constraintStart_toStartOf="@id/user_avater"
                    app:layout_constraintEnd_toEndOf="@id/user_avater"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/v1"
                android:text="@string/fcountry"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/countries"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/v1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/v2"
                android:text="@string/fcolor"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@id/countries"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/colors"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/v2"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@id/colors"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>